--- a/templates/base.html
+++ b/templates/base.html
@@ -101,6 +101,12 @@
                     </svg>
                     <span class="nav-text ml-4">Compras</span>
                 </a>
+                <a href="/education" class="mt-1 group flex items-center px-2 py-2 text-base font-medium rounded-md text-gray-600 hover:bg-gray-50 hover:text-gray-900">
+                    <svg class="h-6 w-6 text-gray-400 group-hover:text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 7v-6m0 0l-9-5m9 5l9-5" />
+                    </svg>
+                    <span class="nav-text ml-4">Educação</span>
+                </a>
             </nav>
             
             <!-- Toggle Button -->
